--- a/game.ipynb
+++ b/game.ipynb
@@ -63,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'negative': -1.0, 'loss': -5.0, 'tick': 1.0, 'positive': 1.0, 'win': 5.0}\n"
+      "{'negative': -1.0, 'tick': 1.0, 'win': 5.0, 'loss': -5.0, 'positive': 1.0}\n"
      ]
     }
    ],
