--- a/game.ipynb
+++ b/game.ipynb
@@ -21,50 +21,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Updates and how to use them:\n",
-    "\n",
-    "1. Define a reward dictionary with the following keys: \"positive\", \"negative\", \"tick\", \"loss\", \"win\". Pass it to the PLE object under the argument reward_values. Negative, tick and positive keys checked and working.\n",
-    "2. Pass the path to the .txt map file as a string to the originalGame object like so : originalGame('/path/to/map.txt')\n",
-    "3. Pass the experiment name as a string to originalGame object like so: originalGame('/path/to/map.txt', 'fire')\n",
-    "options:\n",
-    "'fire' - Places the princess on the ground floor for fire experiments\n",
-    "'ladder' - Places the princess on the first floor for ladder experiments\n",
-    "None(default) - Places the princess on the \"top\" floor as seen in the original code.\n",
-    "\n",
-    "# EXAMPLE USAGE\n",
-    "\n",
-    "<code>\n",
-    "    \n",
-    "mapname = 'enemies.txt'\n",
-    "experiment = 'fire' # choose between ladder/fire/None\n",
-    "\n",
-    "game = originalGame(mapname, experiment)\n",
-    "\n",
-    "rewards = {\n",
-    "    \"positive\": 1.0,\n",
-    "    \"negative\": -1.0,\n",
-    "    \"tick\": 1.0,\n",
-    "    \"loss\": -5.0,\n",
-    "    \"win\": 5.0\n",
-    "}\n",
-    "\n",
-    "p = PLE(game, fps=30, reward_values = rewards, display_screen=True, force_fps=True)\n",
-    "\n",
-    "p.init()\n",
-    "    \n",
-    "</code>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapname = 'enemies.txt'\n",
+    "mapname = 'fire_3.txt'\n",
     "experiment = 'fire' # choose between ladder/fire/None"
    ]
   },
@@ -101,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'negative': -1.0, 'tick': 1.0, 'win': 5.0, 'loss': -5.0, 'positive': 1.0}\n"
+      "{'positive': 1.0, 'loss': -5.0, 'negative': -1.0, 'win': 5.0, 'tick': 1.0}\n"
      ]
     }
    ],
