--- a/game.ipynb
+++ b/game.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapname = 'ladder_1.txt'\n",
+    "mapname = 'ladder-rohan9.txt'\n",
     "experiment = 'ladder' # choose between ladder/fire/None"
    ]
   },
@@ -63,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'positive': 1.0, 'negative': -1.0, 'win': 5.0, 'tick': 1.0, 'loss': -5.0}\n"
+      "{'tick': 1.0, 'positive': 1.0, 'win': 5.0, 'loss': -5.0, 'negative': -1.0}\n"
      ]
     }
    ],
