--- a/game.ipynb
+++ b/game.ipynb
@@ -26,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapname = 'ladder-rohan10.txt'\n",
-    "experiment = 'ladder' # choose between ladder/fire/None"
+    "mapname = 'fire-rohan4.txt'\n",
+    "experiment = 'fire' # choose between ladder/fire/None"
    ]
   },
   {
@@ -63,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'negative': -1.0, 'loss': -5.0, 'win': 5.0, 'tick': 1.0, 'positive': 1.0}\n"
+      "{'tick': 1.0, 'loss': -5.0, 'negative': -1.0, 'positive': 1.0, 'win': 5.0}\n"
      ]
     }
    ],
